# procedure-world-sim

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GenerateProjectFiles.bat  Makefile  README.md  Setup.bat  _build_capture.bat  _build_verify.bat  _build_verify_local.bat  _kill_verify.bat  _pcg_loop.bat  _run_verify.bat  _town_capture2.bat  _verify_suite.bat  realworld.sln
cmake/: CompileShaders.cmake
ml_training/: build_3d_labels.py  check_device.py  compare_autorig.py  debug_augmentation.py  eval.py  export.py  requirements.txt  rig_graph.py  train.py  train_from_captures.py  train_rig3d.py  verify_model.py
ml_training/configs/: config_default.yaml  config_quick_test.yaml
ml_training/data/: data_loader.py  dataset_loader.py
ml_training/models/: multiview_rig3d.py  simple_baseline.py  stacked_hourglass.py  unet_heatmap.py
ml_training/scripts/: download_and_export_model.py
ml_training/utils/: heatmap_utils.py  metrics.py  render_utils.py
patches/: README.txt  sim_engine_qwen.patch
realworld/: application.cpp  application.h  gltf.cpp  gltf.h  main.cpp  realworld.vcxproj  realworld.vcxproj.filters  renderer.cpp  renderer.h  stb_image.h  terrain.cpp  terrain.h  tiny_mtx2.h
realworld/assets/: debug_cube.gltf  terrain_active.txt  terrain_prompts.txt  tree.glb
realworld/assets/Characters/: scene.joints  scene_edited.joints
realworld/assets/icon/: README.txt  flux_1780616924_0.prompt.txt  flux_1780689075_0.png.err
realworld/assets/ml_models/tts/: README.md
realworld/assets/rigs_training.old/scene-skinned/: rig3d.json  scene-skinned_view0_meta.json  scene-skinned_view10_meta.json  scene-skinned_view11_meta.json  scene-skinned_view12_meta.json  scene-skinned_view13_meta.json  scene-skinned_view14_meta.json  scene-skinned_view15_meta.json  scene-skinned_view16_meta.json  scene-skinned_view17_meta.json  scene-skinned_view18_meta.json  scene-skinned_view19_meta.json  scene-skinned_view1_meta.json  scene-skinned_view20_meta.json  scene-skinned_view21_meta.json  scene-skinned_view22_meta.json  scene-skinned_view23_meta.json  scene-skinned_view24_meta.json  scene-skinned_view25_meta.json  scene-skinned_view26_meta.json  scene-skinned_view27_meta.json  scene-skinned_view28_meta.json  scene-skinned_view29_meta.json  scene-skinned_view2_meta.json  scene-skinned_view30_meta.json  scene-skinned_view31_meta.json  scene-skinned_view32_meta.json  scene-skinned_view33_meta.json  scene-skinned_view34_meta.json  scene-skinned_view35_meta.json  scene-skinned_view36_meta.json  scene-skinned_view37_meta.json  scene-skinned_view38_meta.json  scene-skinned_view39_meta.json  scene-skinned_view3_meta.json  scene-skinned_view40_meta.json  scene-skinned_view41_meta.json  scene-skinned_view42_meta.json  scene-skinned_view43_meta.json  scene-skinned_view44_meta.json  (+8 more)
realworld/assets/ui/: title_screen.xml
realworld/compat/: Windows.h
realworld/design/: fantasy_menu.html  terrain_ml_pipeline.md
realworld/src/: application.cpp  application.h  gltf.cpp  gltf.h  main.cpp  rayquery.cpp  raytracing_callable.cpp  raytracing_callable.hpp  raytracing_shadow.cpp  raytracing_shadow.hpp  raytracing_shadow.incl  realworld.vcxproj  realworld.vcxproj.filters  terrain.cpp  terrain.h  tiny_mtx2.h
realworld/src/engine/: engine_helper.cpp  engine_helper.h  gltf.cpp  gltf.h  terrain.cpp  terrain.h  tiny_mtx2.h
realworld/src/engine/game_object/: camera.cpp  camera.h  debug_draw.cpp  debug_draw.h  gltf.cpp  gltf.h  terrain.cpp  terrain.h
realworld/src/engine/ray_tracing/: raytracing_base.h  raytracing_callable.cpp  raytracing_callable.h  raytracing_shadow.cpp  raytracing_shadow.h
realworld/src/engine/renderer/: command_buffer.h  device.h  renderer.cpp  renderer.h  renderer_definition.h  renderer_helper.cpp  renderer_helper.h  renderer_structs.h
realworld/src/engine/renderer/vulkan/: vk_command_buffer.cpp  vk_command_buffer.h  vk_device.cpp  vk_device.h  vk_renderer_helper.cpp  vk_renderer_helper.h
realworld/src/engine/scene_rendering/: ibl_creator.cpp  ibl_creator.h  menu.cpp  menu.h  natural_system.cpp  natural_system.h  skydome.cpp  skydome.h  volume_cloud.cpp  volume_cloud.h  volume_noise.cpp  volume_noise.h  weather_system.cpp  weather_system.h
realworld/src/glfw3/: glfw3.vcxproj  glfw3.vcxproj.filters
realworld/src/plugins/: plugin_interface.h  plugin_manager.cpp  plugin_manager.h
realworld/src/plugins/auto_rig/: auto_rig_plugin.cpp  auto_rig_plugin.h  rig_diffusion_model.cpp  rig_diffusion_model.h  rig_types.h  simple_rasterizer.cpp  simple_rasterizer.h  skinning_weights.cpp  skinning_weights.h
realworld/src/renderer/: device.h  renderer.cpp
realworld/src/shaders/: airflow_update.comp  base.frag  base.vert  blur_image_x.comp  blur_image_y_merge.comp  cloud_lighting.comp  cloud_shadow.comp  cloud_shadow_init.comp  cloud_shadow_merge.comp  cube_skybox.frag  debug_draw.frag  debug_draw.vert  draw_volume_moist.frag  functions.glsl.h  global_definition.glsl.h  glsl_compile.bat  grass.frag  grass.geom  grass.vert  ibl.frag  ibl.glsl.h  inoise.glsl.h  noise.glsl.h  perlin_noise_init.comp  render_volume_cloud.comp  shaders-compile.cfg  skybox.frag  skybox.vert  sunlight_scattering.glsl.h  temperature_init.comp  tile.frag  tile.vert  tile_common.glsl.h  tile_creator.comp  tile_flow_update.comp  tile_update.comp  tile_water.frag  update_camera.comp  update_game_objects.comp  update_gltf_indirect_draw.comp  (+2 more)
realworld/src/shaders/ray_tracing/raytracing_shadow/: rt_closesthit.rchit  rt_miss.rmiss  rt_raygen.rgen
realworld/tools/: plugin_creator.py
realworld/tools/audiogen/: README.md  audiogen_generate.py  setup_audiogen.py
realworld/tools/flux/: README.md  flux_generate.py  requirements.txt  setup_flux.py  test_cpu_encoder.py  test_klein_gpu.py
realworld/tools/terrain/: VERIFY_LOOP.md  pcg_verify_loop.py  terrain_detail_worker.py  terrain_from_text.py  terrain_naturalize.py  terrain_pcg.py  verify_buildings_overlay.py  verify_loop.py
realworld/tools/tts/: download_voices.py
